--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title: John Doe # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  <br><br>
-  First description 
-  <br><br>
-  Second description 
+  <br>
+  Engenharia de Computação
+  <br>
+  Cientista de Dados em formação 
   <br><br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
