--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,12 @@
 title: Carlos Eduardo Cassimiro da Silva # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  <br>
+  Engenharia de Computação
+  <br>
+  Cientista de Dados em formação 
   <br><br>
-  Second description 
-  <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/eduardocassimiro/">Perfil no LinkedIn</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
